syntax = "proto3";

package products;

service ProductService {
  rpc ListProducts(EmptyRequest) returns (ListProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
}

message EmptyRequest {}

message ListProductsResponse {
  repeated string products = 1;
}

message GetProductRequest {
  string productId = 1;
}

message GetProductResponse {
  string productId = 1;
  optional string productName = 2;
  optional string productPrice = 3;
}
